# fastapi_starter_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database_manager.py  env_loader.py  exceptions.py  logging.py
app/dependencies/: database_dependency.py
app/models/: __init__.py  base_model.py  user_model.py
app/routes/v1/: health.py  tv_show.py
app/schemas/responses/: healt_response.py  tv_show_response.py
